refactor openinghours
